--- a/vending-machine/resource/style/style.css
+++ b/vending-machine/resource/style/style.css
@@ -10,3 +10,171 @@ body {
   font-family: "Noto Sans KR", sans-serif;
   background-color: #abaab9;
 }
+
+:root {
+  --1st-color: #ffffff;
+  --2nd-color: #eae8fe;
+  --3rd-color: #6327fe;
+  --4th-color: #bdbdbd;
+}
+
+.app {
+  background-color: var(--2nd-color);
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  align-items: center;
+}
+
+.page {
+  width: 360px;
+  height: 545px;
+  background-color: var(--1st-color);
+  overflow: hidden;
+  border: 1px solid black;
+  margin: 10px;
+}
+
+.page--order {
+  padding: 31px 27px 28px;
+  overflow: hidden;
+}
+
+.cola-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: space-between;
+  flex-wrap: wrap;
+  margin-bottom: 8px;
+}
+
+.cola-list__item {
+  margin-bottom: 12px;
+}
+
+.cola__btn {
+  border-radius: 10px;
+  display: flex;
+  background-color: var(--1st-color);
+  flex-direction: column;
+  align-items: center;
+  padding: 11px 12px 9px;
+  text-align: center;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
+}
+
+.cola__img {
+  width: 36px;
+  height: 64px;
+}
+
+.cola__tit {
+  font-size: 0.9rem;
+  margin-top: 6px;
+  font-weight: 500;
+  margin-bottom: 7px;
+}
+
+.cola__pri {
+  width: 70px;
+  height: 22px;
+  color: var(--1st-color);
+  font-weight: 500;
+  font-size: 1.2rem;
+  line-height: 22px;
+  background-color: var(--3rd-color);
+  border-radius: 50px;
+  padding: 0 15px;
+}
+
+.check {
+  display: flex;
+  font-size: 1.3rem;
+  margin-bottom: 11px;
+}
+
+.check__money {
+  width: 200px;
+  height: 33px;
+  border-radius: 5px;
+  padding: 7px auto;
+  background-color: var(--1st-color);
+}
+
+.check__money--amount {
+  background-color: var(--2nd-color);
+  font-size: 1.4rem;
+  font-weight: 500;
+  padding: 7px 10px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.4rem;
+  line-height: 19px;
+  border-radius: 5px;
+}
+
+.check__money--input {
+  color: var(--4th-color);
+  font-size: 1.3rem;
+  padding-left: 6px;
+  border: 1px solid var(--4th-color);
+}
+
+.check__btn {
+  width: 94px;
+  height: 33px;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  padding: 6px auto 7px;
+  font-size: 1.3rem;
+  background-color: var(--1st-color);
+  margin-left: 12px;
+}
+
+.order-sect {
+  display: flex;
+  justify-content: space-between;
+}
+
+.order-list {
+  width: 200px;
+  background-color: var(--2nd-color);
+  border-radius: 5px;
+  padding: 12px;
+  /* overflow:scroll;  */
+}
+
+.order-list--staged {
+  height: 106px;
+}
+
+.order-list__item {
+  border-radius: 5px;
+  background-color: var(--1st-color);
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+  padding-left: 10px;
+  align-items: center;
+  margin-bottom: 6px;
+}
+
+.order-item {
+  display: flex;
+  align-items: center;
+}
+
+.order-item__img {
+  width: 18px;
+  height: 33px;
+  margin-right: 10px;
+}
+
+.order-sect__btn {
+  width: 94px;
+  height: 106px;
+  border-radius: 5px;
+  font-size: 1.3rem;
+  color: var(--1st-color);
+  background-color: var(--3rd-color);
+}
