--- a/vending-machine/resource/style/style.css
+++ b/vending-machine/resource/style/style.css
@@ -14,11 +14,12 @@ body {
 :root {
   --1st-color: #ffffff;
   --2nd-color: #eae8fe;
-  --3rd-color: #6327fe;
+  --3rd-color: rgb(99, 39, 254);
   --4th-color: #bdbdbd;
 }
 
 .app {
+  min-width: 790px;
   background-color: var(--2nd-color);
   display: flex;
   justify-content: center;
@@ -63,6 +64,17 @@ body {
   padding: 11px 12px 9px;
   text-align: center;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
+  border: 1px solid transparent;
+}
+
+.cola__btn:disabled {
+  cursor: not-allowed;
+  pointer-events: none;
+}
+
+.cola__btn.enabled {
+  border: 1px solid var(--3rd-color);
+  background-color: var(--2nd-color);
 }
 
 .cola__img {
