--- a/vending-machine/resource/style/style.css
+++ b/vending-machine/resource/style/style.css
@@ -238,7 +238,7 @@ span {
 
 .order-list--result {
   width: 100%;
-  padding-bottom: 132px;
+  height: 358px;
   margin-top: 13px;
   margin-bottom: 6px;
 }
