--- a/vending-machine/resource/style/style.css
+++ b/vending-machine/resource/style/style.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
   background-color: #abaab9;
 }
 
@@ -143,6 +143,14 @@ span {
   border: 1px solid var(--4th-color);
 }
 
+.check__money--input::placeholder {
+  color: var(--3rd-color);
+  font-weight: 700;
+  font-style: italic;
+  text-align: right;
+  padding: 10px;
+}
+
 .check__btn {
   width: 94px;
   height: 33px;
@@ -267,12 +275,12 @@ span {
 .soldout::after {
   display: block;
   position: absolute;
-  content: "";
+  content: '';
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   border-radius: 10px;
-  background: url("../img/Sold-out.png") no-repeat center / 58px 45px
+  background: url('../img/Sold-out.png') no-repeat center / 58px 45px
     rgba(0, 0, 0, 0.8);
 }
